# blackjackpy-trainer

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: deploy.yml
blackjack/: __init__.py  cards.py  hand.py  levels.py  metrics.py  rules.py  strategy.py  trainer.py  ui.py
data/: multi-deck.csv  single-deck-exceptions.json  single-deck.csv
docs/: cloud-security.md  colorize-table.md  deploy-cloud-run.md  exception-feedback.md  gcp-metrics-options.md  security-testing.md  statsd-metrics.md  web-deployment.md
grafana/: dashboard.json
k8s/: README.md  deployment.yaml  ingress.yaml  service.yaml
k8s/bootstrap/: namespace.yaml
tests/: __init__.py  test_cards.py  test_exceptions.py  test_hand.py  test_levels.py  test_metrics.py  test_strategy.py  test_trainer.py
web/: app.js  index.html  nginx.conf  server.py  session.py
