[project]
name = "blackjackpy-trainer"
version = "0.1.0"
description = "A console application to train players on blackjack basic strategy"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.129.0",
    "uvicorn[standard]>=0.41.0",
]

[project.optional-dependencies]
metrics = ["statsd>=4.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["blackjack"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
